--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First GitHub Repo</title>
 </head>
 <body>
-    
+    <h1>Hellow world!</h1>
+    <h2>Code added </h2>
 </body>
 </html>
